@@ -12,6 +12,7 @@ okular (4:19.12.2-0r1) UNRELEASED; urgency=medium
   * Drop the 'testsuite' autopkgtest, as it does not test the installed
     packages.
   * Remove unused okular-dev.acc.in file.
+  * Add the configuration for the CI on salsa.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 01 Mar 2020 10:22:07 +0100
 
